--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,9 @@
 body {
   color: $basicColor;
 }
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $red;
+}
