--- a/src/styles/fontface.css
+++ b/src/styles/fontface.css
@@ -1,11 +1,35 @@
-/* @font-face {
-  font-family: "OpenSans-Regular";
-  src: url("fonts/OpenSans-Regular.eot");
-  src: url("fonts/OpenSans-Regular.eot?#iefix") format("embedded-opentype"),
-    url("fonts/OpenSans-Regular.woff2") format("woff2"),
-    url("fonts/OpenSans-Regular.woff") format("woff"),
-    url("fonts/OpenSans-Regular.ttf") format("truetype"),
-    url("fonts/OpenSans-Regular.svg#OpenSans-Regular") format("svg");
-  font-weight: normal;
+@font-face {
+  font-family: "KumbhSans";
+  src: url("/src/assets/fonts/KumbhSans-Thin.woff2");
+  font-weight: 100;
   font-style: normal;
-} */
+  font-display: swap;
+}
+@font-face {
+  font-family: "KumbhSans";
+  src: url("/src/assets/fonts/KumbhSans-Light.woff2");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "KumbhSans";
+  src: url("/src/assets/fonts/KumbhSans-Regular.woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "KumbhSans";
+  src: url("/src/assets/fonts/KumbhSans-Bold.woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "KumbhSans";
+  src: url("/src/assets/fonts/KumbhSans-Black.woff2");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
