--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,2 +1,17 @@
-$dark: #000;
-$lightGray: #778899;
+// Primary
+$orange: hsl(26, 100%, 55%);
+$pale-orange: hsl(25, 100%, 94%);
+
+// Neutral
+$very-dark-blue: hsl(220, 13%, 13%);
+$dark-grayish-blue: hsl(219, 9%, 45%);
+$grayish-blue: hsl(220, 14%, 75%);
+$light-grayish-blue: hsl(223, 64%, 98%);
+
+$white: hsl(0, 0%, 100%);
+$black: hsl(0, 0%, 0%);
+
+// fonts
+$header-1: 900 3rem/5rem "KumbhSans", sans-serif;
+$header-2: 700 1.2rem/3.5 "KumbhSans", sans-serif;
+$subtitle: 400 1rem/2.5 "KumbhSans", sans-serif;
