make a dropdown element and hook for reuse

--- a/src/components/products/Category/Category.scss
+++ b/src/components/products/Category/Category.scss
@@ -1,7 +1,7 @@
 .category {
   .category-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(15em, 20em));
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 2em 4em;
     .item {
       position: relative;
