--- a/src/components/products/SearchBar/SearchBar.scss
+++ b/src/components/products/SearchBar/SearchBar.scss
@@ -12,19 +12,18 @@ form {
 
       input {
         max-width: 25em;
-        padding: 0.2em 1em;
+        padding: 0.2em 2em;
         width: 100%;
 
         &:focus {
           border-color: $orange;
         }
       }
-      button {
+      span {
         position: absolute;
-        top: 0;
-        right: 0;
-        height: 100%;
-        padding: 0 1em;
+        top: 0.85em;
+        left: 0.5em;
+        display: flex;
         cursor: pointer;
       }
     }
