--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,16 +26,49 @@ main {
 footer {
   margin-top: auto;
 }
-h1.title {
+h1.title,
+h2.title {
   text-align: center;
   font: $header-1;
   color: $very-dark-blue;
   margin-bottom: 0.3em;
 }
+h2.title {
+  font: $header-2;
+}
 .subtitle {
   font: $subtitle;
   text-align: center;
   margin-bottom: 1em;
+}
+.add-cart {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5em 1em;
+  font-weight: 300;
+  font-size: 1.2rem;
+  line-height: 1em;
+  background: $orange;
+  border: 1px solid $orange;
+  color: $white;
+  width: 100%;
+  max-width: 8em;
+  white-space: nowrap;
+  cursor: pointer;
+  box-shadow: -1px 3px 12px 0px $orange;
+  transition: 0.5s transform, 0.5s box-shadow;
+  will-change: transform;
+  &:hover {
+    transform: scale(1.1);
+    box-shadow: -2px 0px 8px 2px $orange;
+  }
+  svg {
+    fill: $white;
+    min-width: 1em;
+    min-height: 1em;
+    margin-right: 0.5em;
+  }
 }
 @media screen and (max-width: 1280px) {
   .wrapper {
