--- a/src/components/products/Product/Products.scss
+++ b/src/components/products/Product/Products.scss
@@ -9,14 +9,16 @@
     justify-content: center;
     flex-direction: column;
     padding: 0.5em 1em 1.5em;
-    .img,
-    img {
-      max-width: 20em;
-      width: 100%;
-      height: 100%;
-      max-height: 12em;
-      object-fit: cover;
+    .img {
       margin-bottom: 1em;
+
+      img {
+        max-width: 20em;
+        width: 100%;
+        height: 100%;
+        max-height: 12em;
+        object-fit: contain;
+      }
     }
     h2 {
       margin-bottom: 1em;
