--- a/src/elements/Modal/Modal.scss
+++ b/src/elements/Modal/Modal.scss
@@ -1,33 +1,31 @@
 .modal {
-  height: 100vh;
-  width: 100vw;
-  background: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
   position: fixed;
   top: 0;
+  bottom: 0;
+  right: 0;
   left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 0;
-  z-index: 2;
-  pointer-events: none;
-  transition: 0.5;
-
-  &.active {
-    opacity: 1;
-    pointer-events: all;
-  }
+  z-index: 9998;
 
   &-body {
-    padding: 1.5em;
-    border-radius: 1em;
-    background: $white;
-    transform: scale(0.5);
-    transition: 0.4 all;
-    width: 50vw;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.8);
+    min-width: 50vw;
+    min-height: 20em;
+    position: relative;
 
-    &.active {
-      transform: scale(1);
+    .close {
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      padding: 0.2em;
+      position: absolute;
+      top: 0.2em;
+      right: 0.8em;
     }
   }
 }
