--- a/src/components/products/HomePage/HomePage.scss
+++ b/src/components/products/HomePage/HomePage.scss
@@ -2,3 +2,51 @@
 .category {
   margin-bottom: 3em;
 }
+.hero {
+  background: no-repeat center url(/src/assets/images/hero-image.webp);
+  width: 100%;
+  height: calc(100vh - 8em);
+  position: relative;
+
+  .text-box {
+    position: absolute;
+    top: 5em;
+    left: 3em;
+    max-width: 28em;
+    .title,
+    .subtitle {
+      text-align: left;
+    }
+    .go-shop {
+      max-width: 15em;
+      width: 100%;
+      padding: 0.5em;
+      background: $black;
+      border: 1px solid $black;
+      cursor: pointer;
+      font-size: 1.1em;
+      color: $white;
+      letter-spacing: 0.25em;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-transform: uppercase;
+      transition: 0.3s;
+      svg {
+        margin-left: 0.5em;
+        fill: $white;
+        transition: 0.3s;
+      }
+
+      &:hover {
+        background: transparent;
+        color: orange;
+        border-color: orange;
+
+        > svg {
+          fill: $orange;
+        }
+      }
+    }
+  }
+}
