--- a/src/components/products/Products/Products.scss
+++ b/src/components/products/Products/Products.scss
@@ -1,31 +1,3 @@
-.loader {
-  display: inline-block;
-  width: 80px;
-  height: 80px;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-}
-.loader:after {
-  content: " ";
-  display: block;
-  width: 64px;
-  height: 64px;
-  margin: 8px;
-  border-radius: 50%;
-  border: 6px solid $orange;
-  border-color: $orange transparent $orange transparent;
-  animation: loader 1.2s linear infinite;
-}
-@keyframes loader {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
 form {
   margin-bottom: 2rem;
   .input {
@@ -69,16 +41,16 @@ form {
     justify-content: center;
     flex-direction: column;
     padding: 0.5em 1em 1.5em;
-    .img {
-      margin-bottom: 1em;
+    // .img {
 
-      img {
-        max-width: 20em;
-        width: 100%;
-        height: 100%;
-        max-height: 12em;
-        object-fit: contain;
-      }
+    img {
+      max-width: 20em;
+      width: 100%;
+      height: 100%;
+      max-height: 12em;
+      object-fit: contain;
+      margin-bottom: 1em;
+      // }
     }
     h2 {
       margin-bottom: 1em;
@@ -93,6 +65,18 @@ form {
         font: $header-2;
         line-height: 1.3em;
         color: $black;
+      }
+    }
+    .view-details {
+      border: 1px solid orange;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0.15em 1.5em;
+
+      &:hover {
+        background: $orange;
+        color: $white;
       }
     }
   }
