--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -70,6 +70,33 @@ h2.title {
     margin-right: 0.5em;
   }
 }
+.loader {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.loader:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid $orange;
+  border-color: $orange transparent $orange transparent;
+  animation: loader 1.2s linear infinite;
+}
+@keyframes loader {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 @media screen and (max-width: 1280px) {
   .wrapper {
     padding-left: 20px;
