--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -17,13 +17,38 @@ header {
 
     .button-box {
       margin-left: auto;
+      display: flex;
+      column-gap: 1em;
       button {
         background: unset;
         border: unset;
         cursor: pointer;
       }
-      button:first-child {
-        margin-right: 0.5em;
+      .cart {
+        position: relative;
+        span {
+          background: $orange;
+          color: $white;
+          border-radius: 50%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          position: absolute;
+          width: 1.3em;
+          height: 1.3em;
+          top: 0.5em;
+          right: 0.01em;
+        }
+        svg {
+          width: 1.3em;
+          height: 1.3em;
+          fill: $dark-grayish-blue;
+          transition: 0.3s;
+
+          &:hover {
+            fill: $orange;
+          }
+        }
       }
     }
   }
