--- a/src/components/products/Products/Products.scss
+++ b/src/components/products/Products/Products.scss
@@ -1,82 +1,108 @@
-form {
-  margin-bottom: 2rem;
-  .input {
+// form {
+//   margin-bottom: 2rem;
+//   .input {
+//     display: flex;
+//     justify-content: center;
+
+//     .search-bar {
+//       display: flex;
+//       justify-content: center;
+//       max-width: 25em;
+//       width: 100%;
+//       position: relative;
+
+//       input {
+//         max-width: 25em;
+//         padding: 0.2em 2em;
+//         width: 100%;
+
+//         &:focus {
+//           border-color: $orange;
+//         }
+//       }
+//       span {
+//         position: absolute;
+//         top: 0.85em;
+//         left: 0.5em;
+//         display: flex;
+//         cursor: pointer;
+//       }
+//     }
+//   }
+// }
+.latest {
+  .title {
+    font-size: 2.3em;
+  }
+  .btn-box {
     display: flex;
     justify-content: center;
-
-    .search-bar {
+    column-gap: 1.3em;
+    margin-bottom: 1.5em;
+    button {
       display: flex;
+      align-items: center;
       justify-content: center;
-      max-width: 25em;
-      width: 100%;
-      position: relative;
-
-      input {
-        max-width: 25em;
-        padding: 0.2em 2em;
-        width: 100%;
-
-        &:focus {
-          border-color: $orange;
-        }
-      }
-      span {
-        position: absolute;
-        top: 0.85em;
-        left: 0.5em;
-        display: flex;
-        cursor: pointer;
+      background: transparent;
+      border: 1px solid $orange;
+      padding: 0 2em;
+      cursor: pointer;
+      transition: 0.3s;
+      &:hover {
+        background: $orange;
+        color: $white;
       }
     }
   }
-}
-.products-grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 1em;
-  .item {
-    border: 1px solid $light-grayish-blue;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0.5em 1em 1.5em;
-    // .img {
-
-    img {
-      max-width: 20em;
-      width: 100%;
-      height: 100%;
-      max-height: 12em;
-      object-fit: contain;
-      margin-bottom: 1em;
-      // }
-    }
-    h2 {
-      margin-bottom: 1em;
-      height: 100%;
-      max-height: 20em;
-      overflow: hidden;
-      text-align: center;
+  .products-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1em;
+    .item {
+      border: 1px solid $light-grayish-blue;
       display: flex;
-      justify-content: center;
       align-items: center;
-      a {
+      justify-content: center;
+      flex-direction: column;
+      padding: 0.5em 1em 1.5em;
+      h2 {
+        margin-bottom: 1em;
+        height: 100%;
+        max-height: 20em;
+        overflow: hidden;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         font: $header-2;
         line-height: 1.3em;
         color: $black;
       }
-    }
-    .view-details {
-      border: 1px solid orange;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0.15em 1.5em;
+      img {
+        max-width: 20em;
+        width: 100%;
+        height: 100%;
+        max-height: 12em;
+        object-fit: contain;
+        margin-bottom: 1em;
+      }
+      .price {
+        font-size: 1.1em;
+        margin-bottom: 1em;
+        font-weight: 600;
+        color: $black;
+      }
+      .view-details {
+        border: 1px solid orange;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0.15em 1.5em;
 
-      &:hover {
-        background: $orange;
-        color: $white;
+        &:hover {
+          background: $orange;
+          color: $white;
+        }
       }
     }
   }
